fix: #733 fix tooltip overlaps

--- a/mw-webapp/src/logic/wayPage/reportsTable/ReportsTable.module.scss
+++ b/mw-webapp/src/logic/wayPage/reportsTable/ReportsTable.module.scss
@@ -1,5 +1,4 @@
 .positionTd {
-  position: relative;
   &:nth-child(1) {
     width: 0;
   }
